@@ -32,3 +32,5 @@ May 01 1998	 Fix bug for pdb starting with residue number larger than 1
 		 Correction handling single atom first molecule
 May 05 1998	 Minor changes and bug fixes
 May 15 1998	 Bug fix in declaration
+Jun 03 1998      Change pre_namamb to pre_rename
+	         No partial charge estimation if atom types unresolved
